[metadata]
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
version = 0.0.1
description = Music data access
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = sung
display_name = sung

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

