[metadata]
name = sung
version = 0.0.20
url = https://github.com/thorwhalen/sung
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Music data access
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = sung

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	spotipy
	tabled
	glom
	i2
	pydantic
	pandas
	requests
	reportlab

